modal animation, modal close btn color change, fixing width problems on mobile

--- a/src/sass/layout/_modal.scss
+++ b/src/sass/layout/_modal.scss
@@ -12,14 +12,21 @@
   overflow: scroll;
   padding: 80px 0;
   margin: 0 auto;
+  opacity: 1;
+  will-change: opacity;
+  transition: opacity 250ms cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
 .modal-card {
   position: relative;
   padding: 48px 20px 40px;
-  width: 280px;
+  min-width: 280px;
+  width: 90%;
   background-color: $main-background-color;
   margin: 20px;
+  transform: scale(1);
+  will-change: transform;
+  transition: transform 250ms cubic-bezier(0.165, 0.84, 0.44, 1);
 
   @include tablet {
     width: 704px;
@@ -40,6 +47,15 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  scale: 1;
+  transform: stroke, scale;
+  transition: all 250ms cubic-bezier(0.165, 0.84, 0.44, 1);
+
+  &:hover,
+  &:focus {
+    stroke: $movie-category-color;
+    scale: 1.1;
+  }
 }
 
 .modal-card__movie-info {
